# Snake-Remake

./: .gitignore  CMakeLists.txt  README.md  main.cpp
ColorController/: color_controller.cpp  color_controller.hpp
Compiling/: icon32.h  resources.rc  versioninfo.rc
Food/: big_food.cpp  food.cpp  food.hpp  poison.cpp
Functions/: functions.cpp  functions.hpp  icon32.h
Libs/: raylib.h.gch  raymath.h.gch
RayTools/: raytools.cpp  raytools.hpp
ResourceManager/: resource_manager.cpp  resource_manager.hpp
Resources/: Color names.txt  colors.json
ScoreController/: score_controller.cpp  score_controller.hpp
Snake/: head.cpp  head.hpp  snake.cpp  snake.hpp  tongue.cpp  tongue.hpp
